added blogg section

--- a/app/globals.css
+++ b/app/globals.css
@@ -128,3 +128,23 @@
 .no-visible-scrollbar::-webkit-scrollbar {
   display: none;
 }
+
+
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+  background: var(--background);
+}
+
+::-webkit-scrollbar-thumb {
+  background: white;
+  -webkit-border-radius: 1ex;
+}
+
+::-webkit-scrollbar-corner {
+  background: var(--background);
+}
+
+html {
+  scroll-snap-type: y mandatory;
+}
